// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField render() renders with form context 1`] = `
<TextField
  disabled={false}
  hideErrorMessage={false}
  name="fieldName"
  required={false}
>
  <div
    className="control-group"
  >
    <div
      className="controls"
    >
      <input
        className="form-control"
        disabled={false}
        id="id-fieldName"
        name="fieldName"
        onChange={[Function]}
        required={false}
        type="text"
        value="fieldValue"
      />
    </div>
  </div>
</TextField>
`;

exports[`TextField render() renders without form context 1`] = `
<TextField
  disabled={false}
  hideErrorMessage={false}
  name="fieldName"
  required={false}
>
  <div
    className="control-group"
  >
    <div
      className="controls"
    >
      <input
        className="form-control"
        disabled={false}
        id="id-fieldName"
        name="fieldName"
        onChange={[Function]}
        required={false}
        type="text"
        value=""
      />
    </div>
  </div>
</TextField>
`;
